flux/infrastructure/webapps/silex/deployment.yaml
# Auto-split from cluster files
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silex
  namespace: webapps
  labels:
    app: silex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: silex
  template:
    metadata:
      labels:
        app: silex
    spec:
      containers:
      - name: silex
        image: silexlabs/silex:3.0.0
        resources:
          limits:
            memory: 512Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8080
        - containerPort: 6807
        volumeMounts:
        - name: root
          mountPath: /silex/silex/storage
        - name: hosting
          mountPath: /silex/silex/hosting
      volumes:
      - name: root
        persistentVolumeClaim:
          claimName: silex-root
      - name: hosting
        persistentVolumeClaim:
          claimName: silex-hosting
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
