flux/infrastructure/webapps/silex/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: silex
  namespace: webapps
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`silex.becklab.cloud`)
    middlewares:
    - name: sso-admin-chain
      namespace: identity
    services:
    - name: silex
      port: 8080
  tls:
    secretName: silex-tls
